@@ -1,3 +1,7 @@
+2002-03-05  Kjetil Jacobsen  <kjetilja>
+
+	* Do not allow WRITEFUNCTION and WRITEHEADER on the same handle.
+
 2002-02-27  Kjetil Jacobsen  <kjetilja>
 
 	* Abort callback if the thread state of the calling thread cannot
